--- a/src/main/resources/templates/showUser.html
+++ b/src/main/resources/templates/showUser.html
@@ -5,8 +5,8 @@
     <title th:text="${user.firstname}"></title>
     <style>
         :root {
-      --global-color: #ff6a00;
-      --global-secondary-color: #ffb681;
+      --global-color: #002fff;
+      --global-secondary-color: #81eaff;
       --global-background: rgb(225, 225, 225);
       --global-border-radius: 3rem;
       --global-font-family: sans-serif;
